# kernel_os

./: Cargo.toml  README.md  linker.ld  run.sh  x86_64-blog_os.json
.cargo/: config.toml
src/: main.rs  page_table.rs  vga_buffer.rs
src/boot/: mod.rs
src/interrupts/: mod.rs
src/io/: mod.rs
src/memory/: mod.rs
